   configurable player (probate_judge in mush.cnf) instead of
   God. [SW]
 * regmatch() now returns an error for invalid regexps, whether you're
   storing subpattern matches or not. Reported by Sketch. [MG]
 * Commands involving movement now check the enactor is a player/thing,
   instead of just relying on the command's restriction. [MG]

Version 1.8.5 patchlevel 0                                 Feb 12, 2012

Major changes:
 * The PCRE library is now required to build Penn, instead of falling
   back to an old, buggy version formerly bundled with the MUSH. [SW]
   Daniko assisted greatly with Windows changes and documentation.
 * The OpenSSL library is now required to build Penn. Again, Daniko has
   provided instructions for installing on Windows. [SW]
 * A new command prefix, "}", enables debug for a single execution of the
   command  - }think foo, }+who, etc. See 'help }' for more info. Suggested
   by Wiggles and [GM]. [MG]

Minor changes:
 * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
   "event" restriction is set or cleared. Suggested by [SW]. [MG]
 * Expanded help on lock types and @powers. [MG]
 * @startups are now processed in db order (#0, #1, etc) on reboot instead
   of giving priority to player objects. [MG]
 * @startups (and local_startup() in local.c) are now triggered slightly
   later, ensuring that the db is fully loaded, and that the connected player
   list is loaded on @shutdown/reboot. Suggested by Padraic. [MG]
 * Switch names that are defined but not used by any commands are
   warned about on startup, and several unused ones have been removed
   from the master list. [SW]
 * Tweak utils/mkcmds.pl for the above change and to remove references
   to generating the obsolete patches.h. [SW]
 * Tweak the parameters of the skip list used to store memcheck counts
   to save some memory. [SW]
 * Bring the scheme scripts in utils up to date with current versions