@@ -39,6 +39,9 @@ Minor changes:
    storing subpattern matches or not. Reported by Sketch. [MG]
  * Commands involving movement now check the enactor is a player/thing,
    instead of just relying on the command's restriction. [MG]
+ * @switch, switch(), @[in]filter and attribute @locks (foo:bar) now do
+   lte/gte wildcard matches on <=foo and >=foo patterns. Inspired by 
+   Wiggles. [MG]
 
 Version 1.8.5 patchlevel 0                                 Feb 12, 2012
 
